 * The Javadoc API documentation for the source code.  This is not
   distributed with Daikon, but you can build it by executing the command
     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

5.3.2 (scheduled for May 2016)

Daikon:
 - Command-line argument --user_defined_invariant makes Daikon compute a
   user-defined invariant in addition to those that are built in to Daikon.

===========================================================================

5.3.0 (April 5, 2016)

Daikon:
- We have improved splitter processing. Splitter expressions containing
  'orig' now work correctly.  Also, A splitter expression containing
  references to a parameter and an unqualified member variable with the
  name will now work correctly.

Kvasir:
- We updated the underlying Valgrind infrastructure to version 3.11.0.
  Users of Kvasir to analyze C/C++ codes should not see any differences
  in behavior from the previous version.

Documentation:
- Improved discussion of program points.

We have decided to deprecate support for 32-bit hosts.
- Fjalar/Kvasir, the C/C++ front end for Daikon, no longer builds on a 32-bit
  platform and we will no longer support the 32-bit version of this tool.
- At the present time, Chicory and Daikon continue to build and run on a
  32-bit platform, but we have stopped testing this configuration and make
  no guarantees for the future.

===========================================================================

5.2.26 (March 10, 2016)

This is an update to 5.2.24 to correct a small problem in Chicory.  It was
inadvertently adding extra information to its output files.  This did not
cause Daikon to operate incorrectly.  It only made the data files larger
than necessary.

===========================================================================

5.2.24 (March 4, 2016)

Documentation: